{Fix} Fix title and amount overlapping in report (#1582)
The "Net Income" and amounts would overlap if you scroll sideways

--- a/src/extension/features/toolkit-reports/pages/income-vs-expense/styles.scss
+++ b/src/extension/features/toolkit-reports/pages/income-vs-expense/styles.scss
@@ -1,8 +1,9 @@
 .tk-ive {
   flex: 1;
-  font-size: .85rem;
+  font-size: 0.85rem;
 
   &__net-income {
+    background-color: white;
     border-top: 2px solid #000000;
     border-bottom: 2px solid #000000;
     width: fit-content;
@@ -20,7 +21,7 @@
         }
 
         &--negative {
-          color: #d33c2d
+          color: #d33c2d;
         }
       }
     }
